--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,18 @@
   <title>Redux Ramda Playground</title>
   <link rel="shortcut icon" href="/images/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+
+  <style type="text/css">
+  	.container {
+  		display: flex;
+  		flex-flow: row wrap;
+  		justify-content: space-around;
+  	}
+  </style>
 </head>
 <body>
 
-<div id="app"></div>
+<div id="app" class="container"></div>
 
 <script src="vendor.bundle.js"></script>
 <script src="app.js"></script>
