--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Redux Ramda Playground</title>
   <link rel="shortcut icon" href="/images/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-
-  <style type="text/css">
-  	.container {
-  		display: flex;
-  		flex-flow: row wrap;
-  		justify-content: space-around;
-  	}
-  </style>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/ThisIsDallas/Simple-Grid/master/simplegrid.css">
 </head>
 <body>
 
-<div id="app" class="container"></div>
+<div id="app" class="grid"></div>
 
 <script src="vendor.bundle.js"></script>
 <script src="app.js"></script>
